syntax = "proto3";

option java_package = "com.example.gestionreservation.stubs";

service ReservationService {
  rpc GetReservationById (ReservationRequest) returns (ReservationResponse);
  rpc CreateReservation (CreateReservationRequest) returns (ReservationResponse);
  rpc UpdateReservation (UpdateReservationRequest) returns (ReservationResponse);
  rpc DeleteReservation (DeleteReservationRequest) returns (DeleteReservationResponse);
}

message ReservationRequest {
  int64 id = 1;
}

message CreateReservationRequest {
  int64 clientId = 1;
  int64 chambreId = 2;
  string dateDebut = 3;
  string dateFin = 4;
  string preferences = 5;
}

message UpdateReservationRequest {
  int64 id = 1;
  int64 clientId = 2;
  int64 chambreId = 3;
  string dateDebut = 4;
  string dateFin = 5;
  string preferences = 6;
}

message DeleteReservationRequest {
  int64 id = 1;
}

message ReservationResponse {
  int64 id = 1;
  int64 clientId = 2;
  int64 chambreId = 3;
  string dateDebut = 4;
  string dateFin = 5;
  string preferences = 6;
}

message DeleteReservationResponse {
  string message = 1;
}
